[tool.poetry]
name = "dflow-samples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dflow_samples"}]

[tool.poetry.dependencies]
python = "^3.7"
pydflow = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
